<resources>
    <string name="app_name">Health E</string>
    <string name="powered_by">Powered by</string>
    <string name="btn_next">Selanjutnya</string>
    <string name="btn_skip">Lewati</string>
    <string name="btn_start">Start</string>
    <string name="intro_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa explicabo fugiat iusto modi numquam sint.</string>
    <string name="intro_title">Lorem Ipsum</string>
    <string name="intro_title1">Nutrisi Harian</string>
    <string name="intro_description1">Lihat kebutuhan nutrisi harian tubuh anda seperti kalori, protein, lemak berdasarkan usia dan berat badan anda.</string>
    <string name="intro_title2">Rekomendasi Makanan</string>
    <string name="intro_title3">Hitung Kalori</string>
    <string name="intro_description3">Hitung Kalori harian anda dengan kalkulator kami</string>
    <string name="intro_title4">Jadwalkan Makan Anda</string>
    <string name="intro_description4">Menjadwalkan makanan dengan alarm di gadget anda</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="questionTextview">Anda sudah punya akun?</string>
    <string name="pleaseloginTextview">Silahkan login</string>
    <string name="usernameTextview">Email</string>
    <string name="passwordTextview">Password</string>
    <string name="forgetTextview">Lupa passward?</string>
    <string name="click">klik disini!</string>
    <string name="button_login">Masuk</string>
    <string name="orTextview">Atau</string>
    <string name="button_signup">Daftar</string>
    <string name="activity2_name">Sign Up Activity</string>
    <string name="signUpTextview">Daftar Akun</string>
    <string name="inputEmailPsswdTextview">Masukkan email, username dan password yang valid</string>
    <string name="emailTextview">Email</string>
    <string name="confirmPassTextview">Konfirmasi Password</string>
    <string name="dataPersonTextview">Data Diri</string>
    <string name="step1Textview">Langkah 1 dari 3</string>
    <string name="inputPhotoTextview">Silahkan masukan foto profil anda</string>
    <string name="selectPhotoTv">Pilih foto</string>
    <string name="nextTv">Selanjutnya</string>
    <string name="step2Textview">Langkah 1 dari 2</string>
    <string name="descTextview">Silahkan lengkapi data diri anda</string>
    <string name="fullnameTv">Nama Lengkap</string>
    <string name="wasBornTv">Tempat Tanggal Lahir</string>
    <string name="weightTv">Berat Badan</string>
    <string name="heightTv">Tinggi Badan</string>
    <string name="prevTextview">Sebelumnya</string>
    <string name="step3Textview">Langkah 3 dari 3</string>
    <string name="desc3Textview">Silahkan Tambahkan riwayat penyakit</string>
    <string name="finishTextview">Selesai</string>
    <string name="listTextview1">Penyakit Maag</string>
    <string name="listTextview2">Penyakit paru-paru</string>
    <string name="listTextview3">Diabetes</string>
    <string name="listTextview4">Kolestrol</string>
    <string name="listTextview5">Sariawan</string>
    <string name="listTextview6">Tidak ada</string>
    <string name="register_button_selesai">Selesai</string>
    <string name="register_bb_tv">Berat Badan</string>
    <string name="register_bb_tb">Tinggi Badan</string>
    <string name="register_usia_tv">Usia</string>
    <string name="register_nama_tv">Nama Lengkap</string>
    <string name="btn_selesai">Selesai</string>
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi asperiores at, consectetur cupiditate eligendi illo magni modi nostrum, odio placeat possimus provident tempora totam velit vero vitae voluptate.</string>
    <string name="btn_daftar">Daftar</string>
    <string name="data_diri_desc">Masukan data diri anda disini!</string>
    <string name="email_hint">Silakan Masukan Email</string>
    <string name="nomor_handphone_tv">Nomor Handphone</string>
    <string name="password_register_hint">Silakan Masukan Password</string>
    <string name="register_nomor_telepon_tv">Nomor Telepon</string>
    <string name="tahun_view_regist">Tahun</string>
    <string name="kg">Kg</string>
    <string name="loading">Loading</string>
    <string name="verifikasi_email_btn">Verifikasi Email</string>
    <string name="pilih_foto_profil">Pilih Foto Profil</string>
    <string name="imageview">imageView</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="submit">Submit</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="selesai">Selesai</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_title">Nama Orang</string>
    <string name="email_title">Email</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="informasi_aplikasi">Informasi Aplikasi</string>
    <string name="keluar_aplikasi">Keluar Aplikasi</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="info_app">Informasi Aplikasi</string>
    <string name="gram">gr</string>
    <string name="berat_badan_selengkapnya"><u>Selengkapnya</u></string>
    <string name="zero">0</string>

    <string-array name="bobot_aktifitas">
        <item>Pilih Aktifitas</item>
        <item>Tidak Melakukan Aktifitas</item>
        <item>Melakukan Aktifitas Ringan</item>
        <item>Melakukan Aktifitas Sedang</item>
        <item>Melakukan Aktifitas Berat</item>
    </string-array>
</resources>
