<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/user_profile"
                android:id="@+id/show_image"
                android:contentDescription="@string/imageview" />

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/pilih_foto_profil"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:id="@+id/btn_pilih_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/register_nama_tv" />

            <EditText
                android:id="@+id/input_nama"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="TextFields" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/register_nomor_telepon_tv" />

            <EditText
                android:id="@+id/input_nohp"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </LinearLayout>

    <Button
        android:id="@+id/next_datadiri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="28sp"
        android:fontFamily="@font/quicksand_medium"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_button_login"
        android:text="@string/submit"/>
    </LinearLayout>

