<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/healthe" />

        <Button
            android:id="@+id/btn_exit_intro"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/close_icon"
            android:layout_marginEnd="30dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/layout_exit"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/signUpTextview"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc_daftar"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/inputEmailPsswdTextview"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/form_daftar"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/emailTextview" />

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    tools:ignore="Autofill" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/passwordTextview" />


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/password_register_hint"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    tools:ignore="Autofill" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/confirmPassTextview" />


                <EditText
                    android:id="@+id/input_password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/password_register_hint"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_daftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_button_login"
                android:fontFamily="@font/quicksand_medium"
                android:padding="8dp"
                android:text="@string/btn_daftar"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>



</RelativeLayout>