<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/healthe" />

        <Button
            android:id="@+id/btn_exit_intro"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/close_icon"
            android:layout_marginEnd="30dp" />

    </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/welcome"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvQuetion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/quicksand_medium"
                android:layout_marginTop="10dp"
                android:text="@string/questionTextview"
                android:textSize="20sp" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/loginPlease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/quicksand_medium"
                android:layout_marginStart="30dp"
                android:text="@string/pleaseloginTextview"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/quicksand_medium"
                android:layout_marginTop="50dp"
                android:text="@string/usernameTextview" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                tools:ignore="LabelFor"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/quicksand_medium"
                android:layout_marginTop="20dp"
                android:text="@string/passwordTextview" />


            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/button_masuk"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:background="@drawable/bg_button_login"
                android:text="@string/button_login"
                android:fontFamily="@font/quicksand_medium"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>

