<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        app:titleTextColor="@color/colorWhite"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        tools:targetApi="lollipop" />


    <LinearLayout
        android:id="@+id/layout_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_toolbar"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_daftar"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/emailTextview" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                tools:ignore="Autofill" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/passwordTextview" />


            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="Kosongkan jika tidak diubah"
                android:inputType="textPassword"
                android:padding="15dp"
                tools:ignore="Autofill" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_update_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_daftar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_button_login"
        android:fontFamily="@font/quicksand_medium"
        android:padding="8dp"
        android:text="Ubah Informasi Akun"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

</RelativeLayout>